# bggfinna

./: .gitignore  CLAUDE.md  README.md  dashboard.py  fetch_bgg_games.py  fetch_finna_availability.py  fetch_finna_games.py  load_to_duckdb.py  match_with_bgg.py  pyproject.toml  run_pipeline.py  test_smoke.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh  post-create.sh
.github/workflows/: claude-code-review.yml  test.yml
data/: bgg_games.csv  finna_bgg_matches.csv  finna_bgg_relations.csv  finna_board_games.csv
data/test/: bgg_games.csv  finna_bgg_relations.csv  finna_board_games.csv
diagnostics/: duplicates.py  matching_methods.py
logs/: matching_log.txt
src/bggfinna/: __init__.py  bggapi.py  retry_config.py  utils.py
tests/: test_fuzzy_matching.py  test_matching_strategies.py
