[project]
name = "bggfinna"
version = "0.1.0"
description = "BGG + Finna Board Game Explorer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "fuzzywuzzy>=0.18.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
